Add character and arcweave integration

--- a/src/index.css
+++ b/src/index.css
@@ -3,6 +3,7 @@
   line-height: 1.5;
   font-weight: 400;
 
+  color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
   background-color: #242424;
 
@@ -12,50 +13,71 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
-}
-
-body {
-  margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
-}
-
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
-}
-
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  color: white;
-  background-color: #1a1a1a;
-  cursor: pointer;
-  transition: border-color 0.25s;
-}
-button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
-}
 .hology-overlay {
   pointer-events: none
 }
 .hology-overlay * {
  pointer-events: auto; 
+}
+
+.dialogue-overlay {
+  position: 'absolute';
+  width: 100%;
+  height: 100%;
+  display: flex;
+}
+
+.dialogue-wrapper {
+  position: absolute;
+  top: 100px;
+  margin-left: auto;
+  margin-right: auto;
+  left: 0;
+  right: 0;
+  text-align: center;
+  max-width: 550px;
+  text-wrap: wrap;
+}
+
+.dialogue-name {
+  padding-top: 4px;
+  background-color: rgba(0,0,0,.6);
+}
+
+.dialogue-content {
+  background-color: rgba(0,0,0,.6);
+  padding: 0px 20px 10px 20px;
+}
+
+.dialogue-content p {
+  margin: 0;
+  font-size: 1.5em;
+}
+
+.dialogue-options button {
+  background: none;
+	color: inherit;
+	border: none;
+	padding: 0;
+	font: inherit;
+	cursor: pointer;
+	outline: inherit;
+  display: block;
+  text-align: center;
+  background-color: rgba(0,0,0,.6);
+  margin-top:5px;
+  margin-left: auto;
+  margin-right: auto;
+  left: 0;
+  right: 0;
+  
+  padding: 10px 20px 10px 20px;
+}
+
+.dialogue-options button p {
+  margin: 0;
+}
+
+.dialogue-options button:hover {
+  background-color: rgba(0,0,0,.4);
 }
