--- a/src/pages/start/Start.scss
+++ b/src/pages/start/Start.scss
@@ -1,6 +1,6 @@
 
 .start-screen-bg {
-  background-image: url('start-bg.png');
+  background-image: url('/start-bg.png');
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center center;
@@ -34,7 +34,7 @@ h1 {
 }
 
 .banner-button {
-  background-image: url('banner.png');
+  background-image: url('/banner.png');
   width: 440px;
   height: 170px;
   background-size: cover;
